---version 2.0.2 released---

07-aug-2008 - adelikat - new toggle - frame adv. - lag skip (menu item + hotkey mapping + saved in config)
07-aug-2008 - adelikat - put in -32000 protection on all dialogs that remember x,y
06-aug-2008 - adelikat - change config filename from fceu98.cfg to fceux.cfg
06-aug-2008 - zeromus - add lagcounter and lagflag to savestate
06-aug-2008 - zeromus - SF case 2040448  (View Slots bug - does not include new savestate naming)
06-aug-2008 - zeromus - restore the debugger snap functionality
06-aug-2008 - zeromus - add memory.readbyterange to emulua
06-aug-2008 - zeromus - auto-fill .fcs extension in save state as dialog
06-aug-2008 - zeromus - mmc5 - 64KB games now work correctly
06-aug-2008 - zeromus - mmc5 - use of chr A regs for BG in sprite 8x8 mode is fixed
06-aug-2008 - zeromus - debugger - debugger window is now resizeable

---version 2.0.1 released---

04-aug-2008 - reorganize display toggle options in the menu
04-aug-2008 - adelikat - autofire fix
04-aug-2008 - zeromus - homebrew mmc5 games now have 64KB of exwram instead of only 8KB
04-aug-2008 - zeromus - fix crash related to player2 in lua scripts
03-aug-2008 - qfox - fixed player2 in lua scripts

---version 2.0.0 released---