@@ -674,8 +674,9 @@ BEGIN
     COMBOBOX        COMBO_SOUND_RATE,57,78,53,46,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        COMBO_SOUND_QUALITY,57,54,77,46,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Quality:",65455,17,54,35,10
-    CONTROL         "Mute frame advance.",CHECK_SOUND_MUTEFA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,110,117,11
+    CONTROL         "Mute frame advance.",CHECK_SOUND_MUTEFA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,110,87,11
     CTEXT           "(disabled until config system change)",65462,156,57,120,8
+    CONTROL         "Mute Turbo.",CHECK_SOUND_MUTETURBO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,100,111,55,10
 END
 
 TIMINGCONFIG DIALOGEX 23, 157, 203, 60
