@@ -357,6 +357,8 @@
 #define IDC_EDIT1                       1147
 #define IDC_BUTTON9                     1148
 #define IDC_LIST2                       1149
+#define SOUND_MUTETURBO                 1179
+#define CHECK_SOUND_MUTETURBO           1179
 #define MENU_NETWORK                    40040
 #define MENU_PALETTE                    40041
 #define MENU_SOUND                      40042
@@ -527,7 +529,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        124
 #define _APS_NEXT_COMMAND_VALUE         40240
-#define _APS_NEXT_CONTROL_VALUE         1179
+#define _APS_NEXT_CONTROL_VALUE         1180
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
 #endif
