@@ -1,5 +1,6 @@
 ---version 2.0.2 released---
 
+07-aug-2008 - adelikat - added a mute turbo option in sound config
 07-aug-2008 - adelikat - new toggle - frame adv. - lag skip (menu item + hotkey mapping + saved in config)
 07-aug-2008 - adelikat - put in -32000 protection on all dialogs that remember x,y
 06-aug-2008 - adelikat - change config filename from fceu98.cfg to fceux.cfg
